[package]
name = "mmap-sync2"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Prisiazhnyi <john.koepi@gmail.com>"]
description = "A Rust library for sharing data inbetween processes in a wait-free and zero-copy fashion via memory mapping like cloudflare/mmap-sync but without timeout writer limitation."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sitano/mmap-sync2"
keywords = ["memory-mapping", "synchronization", "interprocess", "wait-free", "zero-copy"]
categories = ["os", "filesystem", "concurrency", "data-structures", "memory-management"]

[dependencies]
bytecheck = { version = "0.7.0", default-features = false }
memmap2 = "0.9.4"
rkyv = { version = "0.7.44", features = ["validation", "strict"] }
seahash = "4.1.0"
thiserror = "1.0.57"

[dev-dependencies]
